metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/ABN_Pipeline_Snapshot__c.object-meta.xml
<CustomObject>
    <label>ABN Pipeline Snapshot</label>
    <nameField>
        <label>ABN Pipeline Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABN Pipeline Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>