metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/BDR__c.field-meta.xml
<CustomField>
    <fullName>BDR__c</fullName>
    <label>BDR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>