metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Bookings_Y1__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Y1__c</fullName>
    <label>Bookings-Y1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>