metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Clearbit_Industry__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Industry__c</fullName>
    <label>Clearbit Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>