metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Close_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Month__c</fullName>
    <label>Close Month</label>
    <type>Date</type>
</CustomField>