metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Contracted_ARR__c.field-meta.xml
<CustomField>
    <fullName>Contracted_ARR__c</fullName>
    <label>Contracted ARR</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>