metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSM_Owner__c</fullName>
    <label>CSM Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>