metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>IF( OR (Pipeline_Stage__c = &quot;Lost&quot;,Pipeline_Stage__c = &quot;Won&quot;), Close_Date__c ,  DATEVALUE(CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>