metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Month__c</fullName>
    <formula>DAY(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of the Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>