metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Forecast_Level__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Level__c</fullName>
    <label>Forecast Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Omit</fullName>
            </value>
            <value>
                <fullName>Minimum Commit</fullName>
            </value>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>At risk</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>At risk - conservative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>