metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Industry_ICP__c.field-meta.xml
<CustomField>
    <fullName>Industry_ICP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industry ICP</label>
    <type>Checkbox</type>
</CustomField>