metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Lead_created_date__c.field-meta.xml
<CustomField>
    <fullName>Lead_created_date__c</fullName>
    <label>Lead created date</label>
    <type>Date</type>
</CustomField>