metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>