metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/MRR_fixed_exch_weighted__c.field-meta.xml
<CustomField>
    <fullName>MRR_fixed_exch_weighted__c</fullName>
    <label>MRR (fixed exch) (weighted)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>