metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/MRR_pipeline__c.field-meta.xml
<CustomField>
    <fullName>MRR_pipeline__c</fullName>
    <formula>IF( OR (Pipeline_Stage__c = &quot;Open&quot;,Pipeline_Stage__c = &quot;Won&quot;), MRR_weighted__c , (MRR__c * -1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR (pipeline)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>