metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/MRR_weighted__c.field-meta.xml
<CustomField>
    <fullName>MRR_weighted__c</fullName>
    <label>MRR (weighted)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>