metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/OEM_Partner__c.field-meta.xml
<CustomField>
    <fullName>OEM_Partner__c</fullName>
    <label>OEM/Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>