metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/One_Off__c.field-meta.xml
<CustomField>
    <fullName>One_Off__c</fullName>
    <label>One Off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>