metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Opportunity_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Create_Date__c</fullName>
    <label>Opportunity Create Date</label>
    <type>Date</type>
</CustomField>