metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>