metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>