metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <label>Parent Account</label>
    <length>120</length>
    <type>Text</type>
</CustomField>