metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager__c</fullName>
    <label>Partner Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>