metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <label>Partner Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>