metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <formula>CASE( Stage__c , &quot;Closed Won&quot;, &quot;Won&quot;,&quot;Closed Lost - No Decision&quot;,&quot;Lost&quot;,&quot;Closed Lost - Competitor&quot;,&quot;Lost&quot;,&quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Stage</label>
    <type>Text</type>
</CustomField>