metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Prop_Date__c.field-meta.xml
<CustomField>
    <fullName>Prop_Date__c</fullName>
    <label>Prop Date</label>
    <type>Date</type>
</CustomField>