metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>