metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/RFP_Received__c.field-meta.xml
<CustomField>
    <fullName>RFP_Received__c</fullName>
    <label>RFP Received?</label>
    <length>55</length>
    <type>Text</type>
</CustomField>