metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Sales_Office_Grouped__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_Grouped__c</fullName>
    <label>Sales Office Grouped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>