metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Sales_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualifier__c</fullName>
    <label>Sales Qualifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>