metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Shipping Country</label>
    <length>120</length>
    <type>Text</type>
</CustomField>