metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Signature_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>Signature_Stage_Date__c</fullName>
    <label>Signature Stage Date</label>
    <type>Date</type>
</CustomField>