metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/SMB_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>SMB_Enterprise__c</fullName>
    <label>SMB - Enterprise</label>
    <length>50</length>
    <type>Text</type>
</CustomField>