metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>