metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>