metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/VOC_Date__c.field-meta.xml
<CustomField>
    <fullName>VOC_Date__c</fullName>
    <label>VOC Date</label>
    <type>Date</type>
</CustomField>