metadata/force-app/main/default/objects/ABN_Pipeline_Snapshot__c/fields/Weekday_Snapped__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Snapped__c</fullName>
    <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 6), 7), 0, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday Snapped</label>
    <type>Text</type>
</CustomField>